# master_den

./: .gitignore  CITATION.cff  LICENSE  README.md  README.rst  commit.sh  get_pandas.ipynb  pyproject.toml  rename.py  requirements.txt  setup.py  tmp.py  trafo_test.py
badass_trajectory_predictor/: __init__.py  get_dataloader.py  get_models.py  run.sh  run_finetune.sh  run_pretrain.sh  run_train.sh  train.py
badass_trajectory_predictor/models/: __init__.py  model.py  one_step_model.py  parallel_model.py
badass_trajectory_predictor/models/attention_based/: __init__.py  bitnet.py  gpt.py  one_step_bitnet.py  one_step_trafo.py  parallel_trafo.py  pos_bitnet.py  pos_trafo.py  retentive.py  sup_bitnet.py  sup_trafo.py  tft.py  transformer.py  uni_bitnet.py  uni_trafo.py  vel_bitnet.py  vel_trafo.py
badass_trajectory_predictor/models/cnn/: __init__.py  cnn.py
badass_trajectory_predictor/models/constant_velocity/: __init__.py  no_model.py
badass_trajectory_predictor/models/linear/: __init__.py  linear.py  linear_dropout.py  one_layer_linear.py  pos_ol_linear.py  pos_tl_linear.py  two_layer_linear.py  vel_ol_linear.py  vel_tl_linear.py
badass_trajectory_predictor/models/lmu/: __init__.py  lmu.py  one_step_lmu.py  parallel_lmu.py  pos_lmu.py  sup_lmu.py  uni_lmu.py  vel_lmu.py
badass_trajectory_predictor/models/lstm/: __init__.py  lstm.py  one_step_lstm.py  parallel_lstm.py  pos_lstm.py  sup_lstm.py  uni_lstm.py  vel_lstm.py
badass_trajectory_predictor/sbatch/: finetune_50612_0.err  finetune_50612_1.err  finetune_50612_1.out  finetune_50612_10.err  finetune_50612_10.out  finetune_50612_11.err  finetune_50612_11.out  finetune_50612_12.err  finetune_50612_12.out  finetune_50612_13.err  finetune_50612_13.out  finetune_50612_14.err  finetune_50612_14.out  finetune_50612_15.err  finetune_50612_15.out  finetune_50612_16.err  finetune_50612_16.out  finetune_50612_17.err  finetune_50612_17.out  finetune_50612_18.err  finetune_50612_18.out  finetune_50612_19.err  finetune_50612_19.out  finetune_50612_2.err  finetune_50612_2.out  finetune_50612_20.err  finetune_50612_21.err  finetune_50612_21.out  finetune_50612_22.err  finetune_50612_22.out  finetune_50612_23.err  finetune_50612_23.out  finetune_50612_24.err  finetune_50612_24.out  finetune_50612_25.err  finetune_50612_25.out  finetune_50612_26.err  finetune_50612_26.out  finetune_50612_27.err  finetune_50612_27.out  (+469 more)
badass_trajectory_predictor/scenes/: __init__.py
badass_trajectory_predictor/scenes/car/: __init__.py  config.py  create_tensor.py  custom_argo_transformation.py  custom_argo_visualization.py  dataset.py
badass_trajectory_predictor/scenes/eth/: __init__.py  animation.py  config.py  create_tensor.py  custom_eth_transformation.py  dataset.py
badass_trajectory_predictor/scenes/nba/: __init__.py  config.py  create_tensor.py  custom_nba_transformation.py  data_extraction.py  dataset.py
badass_trajectory_predictor/scenes/soc/: config.py  create_tensor.py  custom_soccer_transformation.py  dataset.py
badass_trajectory_predictor/utils/: __init__.py  animator.py  dataset_base.py  test_plot.py
badass_trajectory_predictor/utils/custom_transformation/: __init__.py  check_one_trajectory_at_least.py  fix_progress_bar.py  last_transformation.py  shuffle_trajectories.py  split_xy_transformations.py  velocity_transformation.py
benchmark/: rearrange.py
comparison_plots/: 1_graph.py  init_graph.py  rearrange.py  trim.py
project/: __init__.py  get_dataloader.py  get_models.py  info_collector.out  run_finetune.sh  run_train.sh  train.py
project/models/: __init__.py  one_step_model.py
project/models/attention_based/: __init__.py  one_step_bitnet.py  one_step_trafo.py  pos_bitnet.py  pos_trafo.py  uni_bitnet.py  uni_trafo.py  vel_bitnet.py  vel_trafo.py
project/models/linear/: __init__.py  one_layer_linear.py  pos_ol_linear.py  pos_tl_linear.py  two_layer_linear.py  vel_ol_linear.py  vel_tl_linear.py
project/models/lmu/: __init__.py  one_step_lmu.py  pos_lmu.py  uni_lmu.py  vel_lmu.py
project/models/lstm/: __init__.py  one_step_lstm.py  pos_lstm.py  uni_lstm.py  vel_lstm.py
project/scenes/: __init__.py
project/scenes/car/: config.py  create_tensor.py  custom_argo_transformation.py  dataset.py  test.py
project/scenes/eth/: config.py  create_tensor.py  custom_eth_transformation.py  dataset.py
project/scenes/nba/: animation.py  config.py  create_tensor.py  custom_nba_transformation.py  dataset.py
project/scenes/soc/: __init__.py  config.py  create_tensor.py  custom_soccer_transformation.py  dataset.py
project/utils/: __init__.py  animator.py  callbacks.py  dataset_base.py  test_plot.py
project/utils/custom_transformation/: __init__.py  fix_values.py  move_trajectories.py  shuffle_trajectories.py  sort_trajectories.py  split_xy_transformations.py  velocity_transformation.py
results/: combine_finetuned.py  combine_hist_pred.py  combine_other.py  combine_pos.py  combine_pos_vel.py  combine_pretrained.py  combine_rq_1 copy.py  combine_rq_1.py  combine_sl_1.py  combine_sl_10.py  combine_sl_25.py  combine_uni.py  combine_vel.py
(+50 files in other folders)
