[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[project]
name = "master_den"
version = "1.0.0"
authors = [
  { name="Denis Gosalci", email="denisgosalci@outlook.de" },
]
description = "This work evaluates the performance of various neural networks in predicting human trajectories in high-dynamic environments with non-linear movements."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["project*"]
exclude = ["data*", "plots*", "output_logs*"]

[project.urls]
Homepage = "https://github.com/va42xuqi/master_den"
Issues = "https://github.com/va42xuqi/master_den/issues"